Fix spacing in detail page

--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -50,6 +50,13 @@
   margin-right: 3px;
 }
 
+.spacing {
+  display: flex;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .breadcrumbs {
   display: flex;
   align-items: center;
@@ -93,9 +100,13 @@
 .tables td {
   opacity: 0.8;
   font-size: 17px;
-  padding-right: 10px;
   min-width: max-content;
   vertical-align: top;
+}
+
+.tables td:not(:last-child) {
+  margin-right: 10px;
+  display: inline-block;
 }
 
 @media (max-width: 1050px) {
@@ -117,6 +128,11 @@
   .detail {
     margin-top: 20px;
     gap: 20px;
+  }
+
+  .spacing {
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .breadcrumbs {
